<resources>
    <string name="app_name">Hajj_Umarah_Final_Year_Project</string>

    //Tab layout

    <string name="Homee">Home</string>
    <string name="Time">time</string>
    <string name="Weatherr">Weather</string>
    <string name="Currencyy">Currency</string>
    <string name="Qibla">Qibla</string>
    <string name="Mina">Mina</string>
    <string name="Settingss">Settings</string>
    <string name="Ziarat">Ziarat</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="access_token">pk.eyJ1Ijoia2FzaGlmYXdhbjc4NiIsImEiOiJjano1NHRzODMwNDRpM2xtZjQ5emJjdzFsIn0.pWxRIgH74b_KwvQZsZS6sg</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="click_instructions">click_instructions</string>

    <string name="only_twelve_stops_allowed">only_twelve_stops_allowed</string>

    <string name="no_success">no_success</string>

    <string name="successful_but_no_routes">successful_but_no_routes</string>

    <string name="user_location_permission_explanation">user_location_permission_explanation</string>

    <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>

    <string name="entertexthere">Make New Group</string>

    <string name="entertexthereedittext">Enter Group Name</string>

    <string name="btncancle">Cancle</string>

    <string name="btnok">OK</string>
    <string name="title_activity_mapsactivity">Map</string>
    <string name="title_activity_maps">Map</string>


    <string name="convert">Convert</string>
    <string name="usdtxt">USD</string>
    <string name="eurtxt">EUR</string>
    <string name="inrtxt">India</string>
    <string name="pkrtxt">Pakistan</string>
    <string name="afntxt">Afghanistan</string>
    <string name="bdttxt">Bangladesh</string>
    <string name="idrtxt">Indonesia</string>
    <string name="myrtxt">Malaysia</string>
    <string name="trytxt">Turkey</string>
    <string name="aedtxt">Dubai</string>
    <string name="sartxt">Saudi Arabia</string>
    <string name="zero">00</string>

    <string-array name="currency">
        <item>EUR</item>
        <item>AED</item>
        <item>SAR</item>
        <item>USD</item>
        <item>INR</item>
        <item>PKR</item>
        <item>AFN</item>
        <item>BDT</item>
        <item>IDR</item>
        <item>MYR</item>
        <item>TRY</item>
    </string-array>
</resources>
