<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/entertexthere"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/entertext"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:hint="@string/entertexthereedittext"
        android:textSize="30sp"
        android:textAlignment="center"
        android:cursorVisible="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/butcancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btncancle" />

        <Button
            android:id="@+id/butok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnok" />
    </LinearLayout>

</LinearLayout>